--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html style="max-height: 400px;max-width:400px;min-width: 400px;max-width: 400px;text-align: center;">
+    <header>
         <title>IC GPA Calculator</title>
-    </head>
+    </header>
     <body>
-        <button type="button" id="calcGPA">Calculate GPA</button>
-    </body>
+        <a href="#" id="calcGPA" class="myButton">Calculate GPA</a>
+<style>
+.myButton {
+	background:linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	font-weight:bold;
+	padding:13px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+</style>
+<h1 id="GPA"></h1>
+	<style>
+		div.container {
+		background-color: #ffffff;
+		}
+		div.container p {
+		font-family: Arial;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: normal;
+		text-decoration: none;
+		text-transform: none;
+		color: #44c767;
+		background-color: #ffffff;
+		}
+	</style>
+	</body>		
     <script type = "text/javascript" src = "js/popup.js"></script>
 </html>
